--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -25,11 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install invoke .[test]
           # pip install flake8 pytest colorama pandas pyarrow exrex pytest-cov
-          if [ -f pyproject.toml ]; then
-            pip install .[dev]
-          else
-            pip install -r requirements.txt
-          fi
+          if [ -f pyproject.toml ]; then pip install -r .[dev]; fi
     - name: Run unit tests
       run: |
         pytest --cov=sdgp --cov-report=xml tests/
