--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,11 +31,9 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         # pip install flake8 pytest colorama pandas pyarrow exrex pytest-cov
-        if [ -f pyproject.toml ]; then
-          pip install .[dev]
-        else
-          pip install -r requirements.txt
-        fi
+    - name: Install dev dependencies (if pyproject.toml exists)
+      if: path('pyproject.toml')
+      run: python -m pip install -r requirements-dev.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
