--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,8 +32,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         # pip install flake8 pytest colorama pandas pyarrow exrex pytest-cov
     - name: Install dev dependencies (if pyproject.toml exists)
-      if: path('pyproject.toml')
-      run: python -m pip install -r requirements-dev.txt
+      run: 
+        if [ -f pyproject.toml ]; then pip install .[dev] ; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
