--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -26,8 +26,9 @@ jobs:
           python -m pip install invoke .[test]
           # pip install flake8 pytest colorama pandas pyarrow exrex pytest-cov
     - name: Install dev dependencies (if pyproject.toml exists)
-      if: path('pyproject.toml')
-      run: python -m pip install -r requirements-dev.txt
+      run: 
+        if [ -f pyproject.toml ]; then pip install .[dev] ; fi
+
     - name: Run unit tests
       run: |
         pytest --cov=sdgp --cov-report=xml tests/
