--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -24,12 +24,9 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           python -m pip install invoke .[test]
+          python -m pip install invoke .[dev]
           # pip install flake8 pytest colorama pandas pyarrow exrex pytest-cov
-    - name: Install dev dependencies (if pyproject.toml exists)
-      run: |
-        if (Test-Path pyproject.toml ) {
-          pip install .[dev]
-        }
+\
 
     - name: Run unit tests
       run: |
