--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,9 +2,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     types: [opened, reopened]
 
 jobs:
@@ -12,25 +12,24 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ '3.8', '3.9', '3.10', '3.11']
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
+      - uses: actions/checkout@v1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           python -m pip install invoke .[test]
           python -m pip install invoke .[dev]
           # pip install flake8 pytest colorama pandas pyarrow exrex pytest-cov
-\
 
-    - name: Run unit tests
-      run: |
-        pytest --cov=sdgp --cov-report=xml tests/
-    - if: matrix.os == 'ubuntu-latest' && matrix.python-version == 3.8
-      name: Upload codecov report
-      uses: codecov/codecov-action@v2
+      - name: Run unit tests
+        run: |
+          pytest --cov=sdgp --cov-report=xml tests/
+      - if: matrix.os == 'ubuntu-latest' && matrix.python-version == 3.8
+        name: Upload codecov report
+        uses: codecov/codecov-action@v2
