--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,3 +48,9 @@ jobs:
         with:
           flags: unittests
           file: ./coverage.xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: damodhar918/Fast_API_SqlAlchemy_Fast_UI
