--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -33,3 +33,9 @@ jobs:
       - if: matrix.os == 'ubuntu-latest' && matrix.python-version == 3.8
         name: Upload codecov report
         uses: codecov/codecov-action@v2
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: damodhar918/Fast_API_SqlAlchemy_Fast_UI
