Need to intrigrate fast_api and fat_ui

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "requests",
     "faker",
     "aiosqlite",
+    "fastui",
+    "sqlmodel"
+    
 ]
 
 
@@ -30,6 +33,7 @@ dev = ["pytest", "black", "isort", "flake8", "httpx","pytest-cov" ]
 
 [project.scripts]
 fake_load = "cli.req:main"
+fast_api = "app.main_api:main"
 fast_app = "app.main:main"
 
 
